# Raven.FaceAuthorize

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
Raven.FaceAuthorize/: CMakeLists.txt  Raven.FaceAuthorize.cpp  Raven.FaceAuthorize.h
Raven.FaceComparer/: CMakeLists.txt  Raven.FaceComparer.cpp  face_analyzer.cpp  face_analyzer.h  face_persister.cpp  face_persister.h
cmake/: HunterGate.cmake  build_dlib.cmake  build_opencv.cmake  build_raven_client.cmake
