# CMakeList.txt : CMake project for Raven.FaceAuthorize, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Raven.FaceAuthorize "Raven.FaceAuthorize.cpp" "Raven.FaceAuthorize.h")

# TODO: Add tests and install targets if needed.
